--- a/about.html
+++ b/about.html
@@ -1,99 +1,134 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <title>Perimeter Entertainment</title>
 </head>
+
 <body>
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Perimeter Entertainment</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#">Perimeter Entertainment</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link active" href="#">About Us</a>
-      <a class="nav-item nav-link active" href="#">See What We've Done</a>
-      <a class="nav-item nav-link active" href="#">Contact Us</a>
-    </div>
-  </div>
-</nav>
-  <!--Content-->
-  <div class="container">
-  <div class="jumbotron">
-  <h1 class="display-4">Perimeter Entertainment</h1>
-    <div class="row">
-      <div class="col-md-7">
-        <img class="img-fluid rounded mb-3 mb-md-0"       src="https://images.pexels.com/photos/320617/pexels-photo-320617.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="#">About Us</a>
+        <a class="nav-item nav-link active" href="#">See What We've Done</a>
+        <a class="nav-item nav-link active" href="#">Contact Us</a>
       </div>
-<div class="col-md-5">
-  <h3>Our Signature Services include the following:</h3>
-    <ul>
-      <li>Content Creation</li>
-      <li>Audio & Video Productions</li>
-      <li>Live Event Productions</li>
-      <li>Corporate Communications</li>
-      <li>Concept Creations</li>
-      <li>Editing</li>
-    </ul>
-  </div>
-</div>
-<hr>
-    
-<div class="row">
-  <div class="col-md-7">
-    <img class="img-fluid rounded mb-3 mb-md-0" src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c1b566f6cf95b8fe438961fd065158cd&auto=format&fit=crop&w=1050&q=80" alt="">
-  </div>
-        <div class="col-md-5">
-           <h3>Our Media Channels include the following:</h3>
-              <ul>
-                <li>T.V.</li>
-                <li>Film</li>
-                <li>Web</li>
-                <li>Videos</li>
-                <li>Corporate Videos</li>
-              </ul>
-          </div>
-</div>
-<hr>
-
-<div class="row">
-  <div class="col-md-7">
-    <img class="img-fluid rounded mb-3 mb-md-0" src="https://images.unsplash.com/photo-1475850313866-696e8076ac0a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4e8cb605a4be474eb32122d7452c8569&auto=format&fit=crop&w=1050&q=80" alt="">
-  </div>
-          <div class="col-md-5">
-            <h3>We are appreciative of the opportunities to serve clients in the following industries:</h3>
-                <ul>
-                    <li>Entertainment</li>
-                    <li>Corporate</li>
-                    <li>Small Businesses</li>
-                    <li>Healthcare</li>
-                    <li>Hospitality</li>
-                    <li>Educational</li>
-                    <li>Non-Profit</li>
-                </ul>
-            </div>
-</div>
-  <hr class="my-4">
-</div>
-  </div>
-  <!--Social Media-->
-  <footer>
-    <div class="icons">
-      <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
-      <i class="fa fa-youtube fa-3x" aria-hidden="true"></i>
-      <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
     </div>
-  </footer>
-  
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  </nav>
+  <!--Content-->
+  <!--One-->
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="display-4">Perimeter Entertainment</h1>
+      <div class="row">
+        <div class="col-md-7">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://images.unsplash.com/photo-1514077886732-9b375df6f77a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b049d66da72aafca992f3b67c7b63989&auto=format&fit=crop&w=768&q=80" alt="">
+        </div>
+        <div class="col-md-5">
+          <h3>Tell Your Story</h3>
+          <p>Whether you are an artist, a company, or an individual — you have a story to tell. Let us help you tell that story through film and video production. From pre-production planning all the way through to release, we will translate your thoughts and visions into a concrete expression that can be shared with the world.</p>
+        </div>
+      </div>
+      <hr>
+<!--Two-->
+      <div class="row">
+        <div class="col-md-7">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://images.unsplash.com/photo-1431068799455-80bae0caf685?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=af75c1367f95c1f575031124ea851aee&auto=format&fit=crop&w=750&q=80" alt="">
+        </div>
+        <div class="col-md-5">
+          <h3>High Quality Experience</h3>
+          <p>We work across many video genres. Whether you are creating a trade-show video or a documentary, we can provide script-to-screen solutions with a top-of-the-line professional look and sound. Whether shooting on location or in our studio, we will create the feel that conveys your message. </p>
+        </div>
+      </div>
+      <hr>
+<!--Three-->
+      <div class="row">
+        <div class="col-md-7">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://images.unsplash.com/photo-1459184070881-58235578f004?ixlib=rb-0.3.5&s=729fabf7360611b54ba7002197bbecf5&auto=format&fit=crop&w=750&q=80" alt="">
+        </div>
+        <div class="col-md-5">
+          <h3>Start Today</h3>
+          <p>Your first step is to send us a message about your project. We can give you a quote and also point you in the direction of your next steps. We do book up, so contact us soon so we can start the pre-production stages and help you get on the timeline you need.</p>
+        </div>
+      </div>
+      <!--Four-->
+      <div class="row">
+        <div class="col-md-7">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://images.pexels.com/photos/320617/pexels-photo-320617.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        </div>
+        <div class="col-md-5">
+          <h3>Our Signature Services include the following:</h3>
+          <ul>
+            <li>Content Creation</li>
+            <li>Audio & Video Productions</li>
+            <li>Live Event Productions</li>
+            <li>Corporate Communications</li>
+            <li>Concept Creations</li>
+            <li>Editing</li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+<!--Five-->
+      <div class="row">
+        <div class="col-md-7">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c1b566f6cf95b8fe438961fd065158cd&auto=format&fit=crop&w=1050&q=80" alt="">
+        </div>
+        <div class="col-md-5">
+          <h3>Our Media Channels include the following:</h3>
+          <ul>
+            <li>T.V.</li>
+            <li>Film</li>
+            <li>Web</li>
+            <li>Videos</li>
+            <li>Corporate Videos</li>
+          </ul>
+        </div>
+      </div>
+      <hr>
+<!--Six-->
+      <div class="row">
+        <div class="col-md-7">
+          <img class="img-fluid rounded mb-3 mb-md-0" src="https://images.unsplash.com/photo-1475850313866-696e8076ac0a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4e8cb605a4be474eb32122d7452c8569&auto=format&fit=crop&w=1050&q=80" alt="">
+        </div>
+        <div class="col-md-5">
+          <h3>We are appreciative of the opportunities to serve clients in the following industries:</h3>
+          <ul>
+            <li>Entertainment</li>
+            <li>Corporate</li>
+            <li>Small Businesses</li>
+            <li>Healthcare</li>
+            <li>Hospitality</li>
+            <li>Educational</li>
+            <li>Non-Profit</li>
+          </ul>
+        </div>
+      </div>
+      <hr class="my-4">
+    </div>
+    <!--Social Media-->
+    <footer>
+      <div class="icons">
+        <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
+        <i class="fa fa-youtube fa-3x" aria-hidden="true"></i>
+        <i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i>
+      </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
+
 </html>
